--- a/疫情填报系统前端/project.config.json
+++ b/疫情填报系统前端/project.config.json
@@ -1,13 +1,11 @@
 {
-	"description": "项目配置文件",
-	"packOptions": {
-		"ignore": []
-	},
+	"miniprogramRoot": "miniprogram/",
+	"cloudfunctionRoot": "cloudfunctions/",
 	"setting": {
 		"urlCheck": false,
-		"es6": true,
+		"es6": false,
+		"enhance": true,
 		"postcss": true,
-		"preloadBackgroundData": false,
 		"minified": true,
 		"newFeature": true,
 		"coverView": true,
@@ -23,14 +21,9 @@
 			"outputPath": ""
 		}
 	},
-	"compileType": "miniprogram",
-	"libVersion": "2.11.0",
 	"appid": "wxcb0011c205b879dd",
-	"projectname": "%E7%96%AB%E6%83%85%E5%A1%AB%E6%8A%A5%E7%B3%BB%E7%BB%9F",
-	"debugOptions": {
-		"hidedInDevtools": []
-	},
-	"isGameTourist": false,
+	"projectname": "%E7%96%AB%E6%83%85%E5%A1%AB%E6%8A%A5%E7%B3%BB%E7%BB%9F%E6%B5%8B%E8%AF%95",
+	"libVersion": "2.11.0",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
 	"condition": {
@@ -42,13 +35,22 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
-			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "db guide",
+					"pathName": "pages/databaseGuide/databaseGuide"
+				}
+			]
 		}
 	}
 }
