--- a/疫情填报系统前端/project.config.json
+++ b/疫情填报系统前端/project.config.json
@@ -2,7 +2,7 @@
 	"miniprogramRoot": "miniprogram/",
 	"cloudfunctionRoot": "cloudfunctions/",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": false,
 		"enhance": true,
 		"postcss": true,
@@ -23,9 +23,10 @@
 	},
 	"appid": "wxcb0011c205b879dd",
 	"projectname": "%E7%96%AB%E6%83%85%E5%A1%AB%E6%8A%A5%E7%B3%BB%E7%BB%9F%E6%B5%8B%E8%AF%95",
-	"libVersion": "2.11.0",
+	"libVersion": "2.11.1",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
+	"cloudfunctionTemplateRoot": "cloudfunctionTemplate",
 	"condition": {
 		"search": {
 			"current": -1,
